Add contact email to student portal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>Student Portal</h2>
         <p>Welcome to the KL University Student Portal</p>
         <p>Access your academic information and resources</p>
+        <p>Contact: support@kluniversity.in</p>
     </div>
 </body>
 </html>
