Add university logo to portal

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="C:\Users\shash\Downloads\Kl University-01.jpg" alt="KL University Logo" class="logo">
         <h1>KL University</h1>
         <h2>Student Portal</h2>
         <p>Welcome to the KL University Student Portal</p>
